server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
/* ... */
.small-txt {
  font-size: 12px;
}

// scss-lint:disable IdSelector
#new_dashboard-page .reveal {
  overflow-y: visible;
}

// ---------------------  common styles end ------------------------

//animation

//building animation

%building {
  position:   relative;
  background: transparent image_url('building.gif') repeat-x;
}

.dashboard {
  padding: 0 30px 50px;
}

.page_header {
  @include clearfix;

  width:         100%;
  align-items:   center;
  background:    #fff;
  box-shadow:    0 0 0 #000;
  height:        50px;
  box-sizing:    border-box;
  border-bottom: 1px solid $border-color;
  position:      fixed;
  top:           40px;
  z-index:       10;
}

.page_title {
  font-size:   17px;
  font-weight: 600;
  margin:      12px 0 0 0;
  padding:     0 30px;
  align-self:  center;
  float:       left;
}

.dashboard-modifiers {
  display:         flex;
  justify-content: space-between;
  align-items:     center;
  margin-bottom:   10px;
  position:        relative;
  z-index:         5;
}

.grouping_select {
  margin:  0 0 0 10px;
  width:   145px;
  display: inline-block;
}

.pipeline-search_dashboard {
  width: 350px;
}

.dashboard-group {
  margin-bottom: 50px;
  background:    #fff;
}

.main-container {
  margin-top: 50px;
  background: transparent;
  overflow:   visible;
}

.dashboard-group_title {
  background:    #e7eef0;
  margin:        0;
  padding:       10px 10px 10px 30px;
  position:      relative;

  border-radius: $global-border-radius $global-border-radius 0 0;

  span {
    position:    absolute;
    font-size:   12px;
    color:       #666;
    font-weight: normal;
    top:         -19px;
  }

  button {
    margin-top: -5px;
  }

}

.dashboard-group_name {
  font-size:   18px;
  font-weight: 600;
  line-height: 25px;
}

.dashboard-group_edit-config {
  margin-left: 5px;
}

.dashboard-group_items {
  display:                    flex;
  flex-wrap:                  wrap;
  list-style-type:            none;
  margin:                     0 0 0 -5px;
  padding:                    20px 30px;
  border-bottom-left-radius:  3px;
  border-bottom-right-radius: 3px;

  &:empty {
    min-height: 300px;
  }
}

.dashboard-group_pipeline {
  width:         267px;
  padding:       0 0 5px 0;
  border:        1px solid #ddd;
  background:    #fff;
  border-radius: 5px;
  margin:        5px;
}

.new-pipeline-button {
  float:    right;
  position: relative;

  > button {
    padding: 0 35px;
  }

  .new-pipeline-items {
    position:        absolute;
    right:           0;
    margin:          0;
    padding:         0;
    list-style-type: none;
    text-align:      right;
    cursor:          pointer;
    background:      #fff;
    border:          1px solid #d6e0e2;
    border-radius:   0 0 3px 3px;
    width:           100%;

    li {
      margin:      0;
      padding:     4px 10px;
      white-space: nowrap;

      > a {
        color: #000;
      }

      &:hover {
        background: rgba(0, 0, 0, 0.2);
      }
    }
  }
}

.pipeline {
  position: relative;
}

.pipeline_header {
  @include clearfix;

  padding:       0 15px 10px 15px;
  margin:        10px 0 0 0;
  border-radius: 5px 5px 0 0;
  border-bottom: 1px solid $border-color;
}

.pipeline_name {
  font-size:   14px;
  font-weight: 600;
  margin:      0 5px 5px 0;
  word-break:  break-all;
}

.dashboard {
  .tooltip {
    left:  -100%;
    top:   90%;
    width: 10rem;

    &::before {
      left: 35%;
    }
  }
}

.dashboard-group_title {
  .tooltip {
    top: 120%;
  }

  .dashboard-group_add_pipeline {
    float:      right;
    background: #fff;
    padding:    2px 10px;

    .icon_add {
      color:       $icon-color;
      font-weight: 600;
      line-height: 25px;
    }
  }
}

.pipeline_sub_header {
  width:           240px;
  display:         flex;
  justify-content: space-between;
}

.pipeline_actions {
  display:     flex;
  position:    relative;
  top:         -3px;
  flex-shrink: 0;
  right:       0;
  align-items: flex-start;

  .tooltip {
    transform: translate(-53%, 15%);

    &::before {
      left: 75%;
    }
  }
}

.pipeline_history {
  text-decoration: underline;
  font-size:       13px;
  float:           right;
  margin-top:      10px;
}

.material_info-error {
  margin-left: 12px;
}

.pipeline_locked {
  @include icon-before($type: lock);

  overflow:  hidden;
  width:     25px;
  height:    25px;
  font-size: $pipeline_icons_size;
  color:     $icon-color;
  cursor:    pointer;

  &:hover {
    color: $icon-hover-color;
  }

  &.disabled {
    color:  #999;
    cursor: not-allowed;
  }
}

.edit_config {
  @include icon-before($type: gear);

  overflow:  hidden;
  font-size: $pipeline_icons_size;
  color:     $icon-color;

  &:hover {
    color: $icon-hover-color;
  }

  &.disabled {
    color:  #999;
    cursor: not-allowed;
  }
}

.edit_config {
  &:hover {
    animation-name:            rotate;
    animation-duration:        2s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
  }

  @keyframes rotate {
    from {
      transform: rotate(0deg);
    }

    to {
      transform: rotate(360deg);
    }
  }
}

.pipeline-analytics {
  @include icon-before($type: bar-chart);

  padding:   0;
  font-size: $pipeline_icons_size;
  color:     $icon-color;
  cursor:    pointer;

  &:hover {
    color: $icon-hover-color;
  }
}

.pipeline_pause-message {
  word-break: break-all;
  font-size:  12px;
  margin:     5px 0 0 0;
  float:      left;
  clear:      both;
}

.pipeline_instance {
  padding:    10px 0 0;
  border-top: 1px dotted $border-color;
  margin:     0 15px;

  &:first-child {
    border: 0;
  }
}

.no_instance {
  margin:    25px 15px;
  font-size: 13px;
}

.pipeline_instance-label {
  @include ellipsis;

  font-size:   14px;
  font-weight: 500;
  line-height: normal;
}
/* ... */

